manifest/sponsor-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sponsor-panel
  labels:
    app.kubernetes.io/name: sponsor-panel
    app.kubernetes.io/component: web
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    operator.1password.io/auto-restart: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: sponsor-panel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sponsor-panel
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: atcr
      containers:
        - name: web
          image: atcr.io/xeiaso.net/site/sponsor-panel:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 4823
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 4823
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 4823
            initialDelaySeconds: 1
            periodSeconds: 3
