manifest/sponsor-panel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sponsor-panel
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sponsors.xeiaso.net
      secretName: sponsors-xeiaso-net-tls
  rules:
    - host: sponsors.xeiaso.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sponsor-panel
                port:
                  number: 80
